--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -112,14 +112,8 @@ fos_rest:
             pdf: true
             epub: true
             mobi: true
-        templating_formats:
-            html: false
-        force_redirects:
-            html: true
         failed_validation: HTTP_BAD_REQUEST
-        default_engine: twig
-    routing_loader:
-        default_format: json
+    routing_loader: false
     format_listener:
         enabled: true
         rules:
