Upgrade to Symfony 4.4
- disable autowiring for Event (because the Entry entity was injected)
- rename `getClient()` for test to `getTestClient()` to avoid error while overriding (from `BrowserKitAssertionsTrait`)

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -41,7 +41,7 @@ services:
 
     Wallabag\CoreBundle\:
         resource: '../../src/Wallabag/CoreBundle/*'
-        exclude: '../../src/Wallabag/CoreBundle/{Controller,Entity}'
+        exclude: ['../../src/Wallabag/CoreBundle/{Controller,Entity}', '../../src/Wallabag/CoreBundle/Event/*Event.php']
 
     Wallabag\ImportBundle\:
         resource: '../../src/Wallabag/ImportBundle/*'
