--- a/composer.json
+++ b/composer.json
@@ -107,10 +107,10 @@
         "sentry/sentry-symfony": "3.5.3",
         "stof/doctrine-extensions-bundle": "^1.2",
         "swiftmailer/swiftmailer": "^6.3",
-        "symfony/dom-crawler": "^3.4",
+        "symfony/dom-crawler": "^4.0",
         "symfony/monolog-bundle": "^3.1",
         "symfony/swiftmailer-bundle": "^3.2",
-        "symfony/symfony": "3.4.*",
+        "symfony/symfony": "^4.0",
         "tecnickcom/tcpdf": "^6.3.0",
         "twig/extensions": "^1.5",
         "twig/twig": "^2.15",
