Update to FOSUserBundle 3.1
Also remove some deprecation from Symfony.
Use `LegacyEventDispatcherProxy` to handle Symfony 4 dispatch from FOSUser

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -179,8 +179,10 @@ fos_user:
         confirmation:
             enabled: "%fosuser_confirmation%"
     from_email:
-        address:        "%from_email%"
-        sender_name:    wallabag
+        address: "%from_email%"
+        sender_name: wallabag
+    service:
+        mailer: fos_user.mailer.twig_swift
 
 fos_oauth_server:
     db_driver:           orm
