--- a/composer.json
+++ b/composer.json
@@ -69,7 +69,7 @@
         "friendsofsymfony/jsrouting-bundle": "^2.2",
         "friendsofsymfony/oauth-server-bundle": "^1.5",
         "friendsofsymfony/rest-bundle": "~2.1",
-        "friendsofsymfony/user-bundle": "2.1.*",
+        "friendsofsymfony/user-bundle": "^3.1",
         "guzzlehttp/guzzle": "^5.3.1",
         "guzzlehttp/psr7": "^1.8",
         "html2text/html2text": "^4.1",
