--- a/composer.json
+++ b/composer.json
@@ -51,7 +51,7 @@
         "ext-tidy": "*",
         "ext-tokenizer": "*",
         "ext-xml": "*",
-        "babdev/pagerfanta-bundle": "^2.5",
+        "babdev/pagerfanta-bundle": "^3.7",
         "bdunogier/guzzle-site-authenticator": "^1.0.0",
         "craue/config-bundle": "^2.3.0",
         "defuse/php-encryption": "^2.1",
@@ -89,7 +89,8 @@
         "nelmio/api-doc-bundle": "^3.0",
         "nelmio/cors-bundle": "~2.2",
         "ocramius/proxy-manager": "^2.1.1",
-        "pagerfanta/pagerfanta": "^2.4",
+        "pagerfanta/doctrine-orm-adapter": "^3.7",
+        "pagerfanta/twig": "^3.7",
         "php-amqplib/php-amqplib": "^3.4",
         "php-amqplib/rabbitmq-bundle": "^2.11",
         "php-http/client-common": "^2.4",
