--- a/composer.json
+++ b/composer.json
@@ -56,19 +56,18 @@
         "craue/config-bundle": "^2.3.0",
         "defuse/php-encryption": "^2.1",
         "doctrine/collections": "^1.6",
-        "doctrine/common": "^2.13",
-        "doctrine/dbal": "^2.13",
-        "doctrine/doctrine-bundle": "^1.9",
-        "doctrine/doctrine-cache-bundle": "^1.3",
-        "doctrine/doctrine-migrations-bundle": "^1.3",
+        "doctrine/common": "^3.0",
+        "doctrine/dbal": "^3.3",
+        "doctrine/doctrine-bundle": "^2.0",
+        "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/event-manager": "^1.1",
-        "doctrine/migrations": "^1.8",
+        "doctrine/migrations": "^3.2",
         "doctrine/orm": "^2.6",
-        "doctrine/persistence": "^1.3",
+        "doctrine/persistence": "^3.0",
         "egulias/email-validator": "^3.2",
         "enshrined/svg-sanitize": "^0.15.4",
         "friendsofsymfony/jsrouting-bundle": "^2.2",
-        "friendsofsymfony/oauth-server-bundle": "^1.5",
+        "friendsofsymfony/oauth-server-bundle": "dev-master#dc8ff343363cf794d30eb1a123610d186a43f162",
         "friendsofsymfony/rest-bundle": "~3.4",
         "friendsofsymfony/user-bundle": "^3.1",
         "guzzlehttp/guzzle": "^5.3.1",
@@ -83,8 +82,8 @@
         "kphoen/rulerz-bundle": "~0.13",
         "laminas/laminas-code": "^4.7",
         "laminas/laminas-diactoros": "^2.3",
-        "lcobucci/jwt": "~4.2.1",
-        "lexik/form-filter-bundle": "^6.1.1",
+        "lcobucci/jwt": "~4.1.5",
+        "lexik/form-filter-bundle": "^7.0",
         "mgargano/simplehtmldom": "~1.5",
         "mnapoli/piwik-twig-extension": "^3.0",
         "nelmio/api-doc-bundle": "^3.0",
@@ -127,7 +126,7 @@
         "willdurand/hateoas-bundle": "~2.1"
     },
     "require-dev": {
-        "dama/doctrine-test-bundle": "^6.0",
+        "dama/doctrine-test-bundle": "^7.1",
         "doctrine/doctrine-fixtures-bundle": "~3.0",
         "friendsofphp/php-cs-fixer": "~3.4",
         "friendsoftwig/twigcs": "^6.0",
