Update to `scheb/2fa-bundle`
Following https://github.com/scheb/2fa/blob/5.x/UPGRADE.md

--- a/composer.json
+++ b/composer.json
@@ -83,6 +83,7 @@
         "laminas/laminas-code": "^4.7",
         "laminas/laminas-diactoros": "^2.3",
         "lexik/form-filter-bundle": "^6.1.1",
+        "lcobucci/jwt": "~4.1.5",
         "mgargano/simplehtmldom": "~1.5",
         "mnapoli/piwik-twig-extension": "^3.0",
         "nelmio/api-doc-bundle": "^3.0",
@@ -102,7 +103,12 @@
         "predis/predis": "^2.0.3",
         "psr/http-message": "^1.0",
         "psr/log": "^1.1",
-        "scheb/two-factor-bundle": "^4.11.0",
+        "scheb/2fa-backup-code": "^5.13",
+        "scheb/2fa-bundle": "^5.13",
+        "scheb/2fa-email": "^5.13",
+        "scheb/2fa-google-authenticator": "^5.13",
+        "scheb/2fa-qr-code": "^5.13",
+        "scheb/2fa-trusted-device": "^5.13",
         "sensio/framework-extra-bundle": "^6.2",
         "sentry/sentry-symfony": "3.5.3",
         "stof/doctrine-extensions-bundle": "^1.2",
