--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -34,6 +34,8 @@ framework:
     fragments: ~
     http_method_override: true
     assets: ~
+    mailer:
+        dsn: "%mailer_dsn%"
 
 # Twig Configuration
 twig:
@@ -77,18 +79,6 @@ doctrine_migrations:
     namespace: Application\Migrations
     table_name: migration_versions
     name: Application Migrations
-
-# Swiftmailer Configuration
-swiftmailer:
-    transport:   "%mailer_transport%"
-    username:    "%mailer_user%"
-    password:    "%mailer_password%"
-    host:        "%mailer_host%"
-    port:        "%mailer_port%"
-    encryption:  "%mailer_encryption%"
-    auth_mode:   "%mailer_auth_mode%"
-    spool:
-        type: memory
 
 fos_rest:
     param_fetcher_listener: true
@@ -183,7 +173,7 @@ fos_user:
         address: "%from_email%"
         sender_name: wallabag
     service:
-        mailer: fos_user.mailer.twig_swift
+        mailer: Wallabag\UserBundle\Mailer\UserMailer
 
 fos_oauth_server:
     db_driver:           orm
