--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -200,6 +200,16 @@ services:
     wallabag_core.entry.download_images.client:
         alias: 'httplug.client.wallabag_core.entry.download_images'
 
+    Wallabag\UserBundle\Mailer\UserMailer:
+        arguments:
+            $parameters:
+                template:
+                    confirmation: '%fos_user.registration.confirmation.template%'
+                    resetting: '%fos_user.resetting.email.template%'
+                from_email:
+                    confirmation: '%fos_user.registration.confirmation.from_email%'
+                    resetting: '%fos_user.resetting.email.from_email%'
+
     Wallabag\UserBundle\EventListener\CreateConfigListener:
         arguments:
             $itemsOnPage: "%wallabag_core.items_on_page%"
