--- a/composer.json
+++ b/composer.json
@@ -65,6 +65,7 @@
         "doctrine/migrations": "^1.8",
         "doctrine/orm": "^2.6",
         "doctrine/persistence": "^1.3",
+        "egulias/email-validator": "^3.2",
         "enshrined/svg-sanitize": "^0.15.4",
         "friendsofsymfony/jsrouting-bundle": "^2.2",
         "friendsofsymfony/oauth-server-bundle": "^1.5",
@@ -112,10 +113,9 @@
         "sensio/framework-extra-bundle": "^6.2",
         "sentry/sentry-symfony": "3.5.3",
         "stof/doctrine-extensions-bundle": "^1.2",
-        "swiftmailer/swiftmailer": "^6.3",
         "symfony/dom-crawler": "^4.0",
+        "symfony/mailer": "^4.0",
         "symfony/monolog-bundle": "^3.1",
-        "symfony/swiftmailer-bundle": "^3.2",
         "symfony/symfony": "^4.0",
         "tecnickcom/tcpdf": "^6.3.0",
         "twig/extra-bundle": "^3.4",
