Upgrade to Twig 3

--- a/composer.json
+++ b/composer.json
@@ -82,8 +82,8 @@
         "kphoen/rulerz-bundle": "~0.13",
         "laminas/laminas-code": "^4.7",
         "laminas/laminas-diactoros": "^2.3",
-        "lexik/form-filter-bundle": "^6.1.1",
         "lcobucci/jwt": "~4.1.5",
+        "lexik/form-filter-bundle": "^6.1.1",
         "mgargano/simplehtmldom": "~1.5",
         "mnapoli/piwik-twig-extension": "^3.0",
         "nelmio/api-doc-bundle": "^3.0",
@@ -118,8 +118,9 @@
         "symfony/swiftmailer-bundle": "^3.2",
         "symfony/symfony": "^4.0",
         "tecnickcom/tcpdf": "^6.3.0",
-        "twig/extensions": "^1.5",
-        "twig/twig": "^2.15",
+        "twig/extra-bundle": "^3.4",
+        "twig/string-extra": "^3.4",
+        "twig/twig": "^3.4.3",
         "wallabag/php-mobi": "~1.0",
         "wallabag/phpepub": "^4.0.10",
         "willdurand/hateoas": "^3.8",
