--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -16,11 +16,6 @@ parameters:
             path: src/Wallabag/ApiBundle/Controller/WallabagRestController.php
 
         -
-            message: "#^Call to an undefined method Doctrine\\\\Persistence\\\\ObjectManager\\:\\:getConnection\\(\\)\\.$#"
-            count: 5
-            path: src/Wallabag/CoreBundle/Command/InstallCommand.php
-
-        -
             message: "#^Call to an undefined method Wallabag\\\\CoreBundle\\\\Entity\\\\RuleInterface\\:\\:getConfig\\(\\)\\.$#"
             count: 1
             path: src/Wallabag/CoreBundle/Controller/ConfigController.php
@@ -39,11 +34,6 @@ parameters:
             message: "#^Call to an undefined method Lexik\\\\Bundle\\\\FormFilterBundle\\\\Filter\\\\Query\\\\QueryInterface\\:\\:getExpr\\(\\)\\.$#"
             count: 10
             path: src/Wallabag/CoreBundle/Form/Type/EntryFilterType.php
-
-        -
-            message: "#^Call to an undefined method Doctrine\\\\Persistence\\\\ObjectManager\\:\\:getConnection\\(\\)\\.$#"
-            count: 1
-            path: src/Wallabag/ImportBundle/Command/ImportCommand.php
 
         -
             message: "#^Call to an undefined method Wallabag\\\\ImportBundle\\\\Import\\\\ImportInterface\\:\\:setFilepath\\(\\)\\.$#"
@@ -84,3 +74,13 @@ parameters:
             message: "#^Property Tests\\\\Wallabag\\\\CoreBundle\\\\Helper\\\\RedirectTest\\:\\:\\$routerMock has unknown class PHPUnit_Framework_MockObject_MockObject as its type\\.$#"
             count: 1
             path: tests/Wallabag/CoreBundle/Helper/RedirectTest.php
+
+        -
+            message: "#^Method Symfony\\\\Contracts\\\\EventDispatcher\\\\EventDispatcherInterface\\:\\:dispatch()#"
+            count: 1
+            path: src/Wallabag/CoreBundle/Command/InstallCommand.php
+
+        -
+            message: "#^Method Symfony\\\\Contracts\\\\EventDispatcher\\\\EventDispatcherInterface\\:\\:dispatch()#"
+            count: 1
+            path: src/Wallabag/CoreBundle/Command/ReloadEntryCommand.php
