--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -1,29 +1,9 @@
 parameters:
     ignoreErrors:
         -
-            message: "#^Call to an undefined method Psr\\\\Container\\\\ContainerInterface\\:\\:getParameter\\(\\)\\.$#"
-            count: 2
-            path: src/Wallabag/ApiBundle/Controller/EntryRestController.php
-
-        -
-            message: "#^Call to an undefined method Psr\\\\Container\\\\ContainerInterface\\:\\:getParameter\\(\\)\\.$#"
-            count: 1
-            path: src/Wallabag/ApiBundle/Controller/UserRestController.php
-
-        -
-            message: "#^Call to an undefined method Psr\\\\Container\\\\ContainerInterface\\:\\:getParameter\\(\\)\\.$#"
-            count: 3
-            path: src/Wallabag/ApiBundle/Controller/WallabagRestController.php
-
-        -
             message: "#^Call to an undefined method Wallabag\\\\CoreBundle\\\\Entity\\\\RuleInterface\\:\\:getConfig\\(\\)\\.$#"
             count: 1
             path: src/Wallabag/CoreBundle/Controller/ConfigController.php
-
-        -
-            message: "#^Call to an undefined method Psr\\\\Container\\\\ContainerInterface\\:\\:getParameter\\(\\)\\.$#"
-            count: 1
-            path: src/Wallabag/CoreBundle/Controller/StaticController.php
 
         -
             message: "#^Call to an undefined method Lexik\\\\Bundle\\\\FormFilterBundle\\\\Filter\\\\Query\\\\QueryInterface\\:\\:getExpressionBuilder\\(\\)\\.$#"
@@ -77,10 +57,10 @@ parameters:
 
         -
             message: "#^Method Symfony\\\\Contracts\\\\EventDispatcher\\\\EventDispatcherInterface\\:\\:dispatch()#"
-            count: 1
-            path: src/Wallabag/CoreBundle/Command/InstallCommand.php
+            count: 15
+            path: src/*
 
         -
-            message: "#^Method Symfony\\\\Contracts\\\\EventDispatcher\\\\EventDispatcherInterface\\:\\:dispatch()#"
-            count: 1
-            path: src/Wallabag/CoreBundle/Command/ReloadEntryCommand.php
+            message: "#^Method FOS\\\\UserBundle\\\\Model\\\\UserManagerInterface\\:\\:updateUser()#"
+            count: 7
+            path: src/Wallabag/CoreBundle/Controller/ConfigController.php
