--- a/composer.json
+++ b/composer.json
@@ -116,6 +116,7 @@
         "symfony/dom-crawler": "^4.0",
         "symfony/mailer": "^4.0",
         "symfony/monolog-bundle": "^3.1",
+        "symfony/proxy-manager-bridge": "^4.4",
         "symfony/symfony": "^4.0",
         "tecnickcom/tcpdf": "^6.3.0",
         "twig/extra-bundle": "^3.4",
